project(Recursion)

add_executable(factorial factorial.cc)
add_executable(triangle triangle.cc)
add_executable(reverse_triangle reverse_triangle.cc)
add_executable(3n+1_seq sequence3n+1.cc)
add_executable(3n+1_len length3n+1.cc)
add_executable(power power.cc)
add_executable(array_maximum array_maximum.cc)
add_executable(array_sum array_sum.cc)
add_executable(array_average array_average.cc)
add_executable(array_increment array_increment.cc)
add_executable(array_accumulation array_accumulation.cc)
add_executable(left-max left-max.cc)
add_executable(right-max right-max.cc)
add_executable("suffix-sum" "${CMAKE_CURRENT_SOURCE_DIR}/suffix-sum.cc")
add_executable("prefix-sum" "${CMAKE_CURRENT_SOURCE_DIR}/prefix-sum.cc")
add_executable(is_palindrome is_palindrome.cc)
add_executable(is_prefix is_prefix.cc)
add_executable(count_primes count_primes.cc)
add_executable(grid_sum grid_sum.cc)
add_executable(fibonacci fibonacci.cc)
add_executable(trace trace.cc)
