cmake_minimum_required(VERSION 3.20)
project(Sorting)

add_executable(1_insertion_sort 1_insertion_sort.cpp)
add_executable(2_stl_usage 2_stl_usage.cpp)
add_executable(3_selection 3_selection.cpp)
add_executable(4_count_sort 4_count_sort.cpp)

add_subdirectory(sorting_homework_1)
add_subdirectory(sorting_homework_2)
