project(sorting_homework_2)

# compute time & memory complexity when applicable

add_executable(problem1_2 problem1.cc)
add_executable(problem2_2 problem2.cc)
add_executable(problem3_2 problem3.cc)
add_executable(problem4_2 problem4.cc)
add_executable(problem5_2 problem5.cc)
add_executable(problem6_2 problem6.cc)
